--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ html{
     flex-direction: column;
     height: 150vh;
     position: relative; 
-    background: url("img/7.jpg") no-repeat center center/cover;
+    background: url("../img/7.jpg") no-repeat center center/cover;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -75,6 +75,256 @@ html{
     margin: 30px 25px;
     z-index: 1;
 }
+
+
+#about{
+    /* display: flex; */
+    position: relative;
+    /* height: 550px; */
+    color: white;
+}
+
+#aboutMe{
+    text-align: center;
+    margin: 0px;
+    padding: 8px;
+    font-family: 'Splash', cursive;
+    font-size: 50px;
+}
+
+#short-summary{
+    font-size: 25px;
+    text-align: center;
+    /* font-family: 'Splash', cursive; */
+    /* font-family: 'Arima', cursive; */
+    font-family: 'Kaushan Script', cursive;
+    margin: 18px;
+}
+#about::before{
+    content: "";
+    position: absolute;
+    background: url('../img/frameback2.jpg') no-repeat center center/cover;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    /* opacity: 0.7; */
+}
+
+.about-all{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#about-item{
+    padding: 34px;
+}
+
+#about-item img{
+    height: 250px;
+}
+#poemsContainer{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    /* height: 550px; */
+    /* background-color: brown; */
+}
+
+#poemsContainer h2{
+    text-align: center;
+    font-family: 'Arima', cursive;
+    margin: 0px;
+    padding: 17px;
+    /* background-image: url(../css/img/backg.jpg); */
+    background-color:darksalmon;
+}
+.collapsible{
+    background-color: peachpuff;
+    color: black;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: 2px;
+    border-color: yellow;
+    text-align: center;
+    font-size: 15px;
+    /* font-family: 'Splash', cursive; */
+    font-family: 'Dancing Script', cursive;
+}
+
+.active, .collapsible:hover{
+    background-color: palevioletred;
+    color: antiquewhite;
+}
+
+.content{
+    padding: 0px 18px;
+    display: none;
+    overflow: hidden;
+}
+#c1{
+    background-image: url(../img/aesthetic1.jpg);
+    opacity: 60%;
+}
+
+#c2{
+    background-image: url(../img/aesthetic2.jpg);
+    opacity: 100%;
+    color: white;
+}
+#c3{
+    background-image: url(../img/aesthetic3.jpg);
+    opacity: 100%;
+    color: white;    
+}
+#c4{
+    background-image: url(../img/aesthetic4.jpg);
+    opacity: 100%;
+    color: black;
+}
+
+#c5{
+    background-image: url(../img/aesthetic5.jpg);
+    opacity: 100%;
+    color: white;   
+}
+#c6{
+    background-image: url(../img/aesthetic6.jpg);
+    opacity: 100%;
+    color: white;     
+}
+
+#c7{
+    background-image: url(../img/aesthetic7.jpg);
+    opacity: 100%;
+    color: white;     
+}
+
+#c8{
+    background-image: url(../img/aesthetic8.jpg);
+    opacity: 100%;
+    color: white;     
+}
+
+#c9{
+    background-image: url(../img/aesthetic9.jpg);
+    opacity: 100%;
+    color: black;     
+}
+
+#c10{
+    background-image: url(../img/aesthetic10.jpg);
+    opacity: 100%;
+    color: black;    
+}
+
+#c11{
+    background-image: url(../img/aesthetic11.jpg);
+    opacity: 100%;
+    color: black;
+}
+
+#c12{
+    background-image: url(../img/aesthetic12.jpg);
+    opacity: 100%;
+    color: white;
+}
+
+#c13{
+    background-image: url(../img/aesthetic13.jpg);
+    opacity: 100%;
+    color: white;
+}
+
+#c14{
+    background-image: url(../img/aesthetic14.jpg);
+    opacity: 100%;
+    color: white;
+}
+
+#c15{
+    background-image: url(../img/aesthetic15.jpg);
+    opacity: 100%;
+    color: black;
+}
+
+#c16{
+    background-image: url(../img/aesthetic16.jpg);
+    opacity: 100%;
+    color: orangered;
+}
+
+#c17{
+    background-image: url(../img/aesthetic17.jpg);
+    opacity: 100%;
+    color: white;   
+}
+#poemsContainer p{
+    font-family: 'Arima', cursive; 
+    text-align: center;
+}
+
+#contact{
+    position: relative;
+}
+#contact::before{
+    content: "";
+    /* display: flex; */
+    position: absolute;
+    height: auto;
+    margin: 0px;
+    padding: 0px;
+    background-color: white;
+}
+
+#contact-link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#contact-link img{
+    /* display: flex; */
+    position: relative;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    padding: 10px;
+    margin: 10px;
+    height: 50px;
+    justify-content: center;
+}
+
+.contact-info h1{
+    text-align: center;
+    font-size: 25px;
+    font-family: 'Arima', cursive;
+    background-color: black;
+    color: white;
+}
+
+#insta:hover{
+    cursor: pointer;
+}
+
+#whatsapp:hover{
+    cursor: pointer;
+}
+
+#linkedin:hover{
+    cursor: pointer;
+}
+
+#gmail:hover{
+    cursor: pointer;
+}
+footer{
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+
 
 
 #about{
